--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://thalesgomest.github.io/projeto7-instagram-react",
   "name": "projeto7-instagram-react",
   "version": "0.1.0",
   "private": true,
@@ -8,6 +9,8 @@
     "react-scripts": "^4.0.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
